5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1326.log
== TEST (2019-04-09 18:28:33) 
-- CODE:
var a = ("40")
var b = ("35")
print=("var a + var b")
-- ERROR:
File "XXXX", line 1
    var a = ("40")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:29:50) 
-- CODE:
var=("40+35")
input=("var")
-- ERROR:
File "XXXX", line 1
    var a = ("40")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:31:53) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:31:56) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.146066
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
